PROJECT(udx)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_FLAGS -fpermissive )
#SET(CMAKE_CXX_COMPILER arm-hisiv300-linux-g++)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
AUX_SOURCE_DIRECTORY(src SRC_LIST)
AUX_SOURCE_DIRECTORY(tinyxml TINYXML_SRC_LIST)
ADD_LIBRARY(tinyxml STATIC ${TINYXML_SRC_LIST})
INCLUDE_DIRECTORIES(src)
INCLUDE_DIRECTORIES(include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
EXECUTE_PROCESS(COMMAND cp ${PROJECT_SOURCE_DIR}/res . -r)
EXEC_PROGRAM(basename ARGS ${CMAKE_CURRENT_SOURCE_DIR} OUTPUT_VARIABLE TARGET_NAME RETURN_VALUE RET) 
MESSAGE(STATUS ${TARGET_NAME})
ADD_EXECUTABLE(${TARGET_NAME} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${TARGET_NAME} tinyxml)
#TARGET_LINK_LIBRARIES(${TARGET_NAME} ${MINIGUI_LIB} dl m pthread xt_xml stdc++)

